# timestamps-tip-scanner

./: .gitignore  .pre-commit-config.yaml  README.md  brownie-config.yaml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
contracts/: Governance.sol  TellorFlex.sol  Token.sol  UsingTellor.sol
src/: Call.py  autopay_calls.py  claim_tips.py  event_scanner.py  event_scanner_state.py  jsonified_state.py  timestamps_tip_scanner.py  utils.py
src/timestamps_tip_scanner/: autopay_calls.py  call.py  claim_tips.py  constants.py  event_scanner.py  jsonified_state.py  logger.py  run.py  timestamps_scanner.py  utils.py
src/timestamps_tip_scanner/abi/: autopay.json  tellorflex.json
src/timestamps_tip_scanner/api/: main.py  utils.py
src/timestamps_tip_scanner/claims/: feed_tips.py  single_tips.py
src/timestamps_tip_scanner/cli/: main.py
src/timestamps_tip_scanner/cli/commands/: claim.py  claim_one_time_tip.py  claim_tip.py  scan.py  single_claims.py
tests/: conftest.py  test_binary_search.py  test_claiming_one_time_tips.py  test_decode.py  test_feed_tips.py
timestamps_tip_scanner/: autopay_calls.py  call.py  event_scanner.py  jsonified_state.py
