[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
name=timestamps_tip_scanner
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    tqdm==4.64.0
    web3==5.28.0
    python-dotenv==0.20.0
    multicall==0.7.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    scanner = timestamps_tip_scanner.cli.main:main

[options.package_data]
* = *.csv, *.json